<resources>
    <string name="app_name">All Together</string>
    <string name="user_name">User Name</string>
    <string name="type_a_message">Type a message</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login with Google to volunteer</string>
    <string name="phone_login_available_only_for_help_seekers">Phone Login available Only for help seekers!</string>
    <string name="login_with_phone">Login With Phone</string>
    <string name="new_user">New User?</string>
    <string name="register_now">Register Now</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="enter_your_email_address_and_wait_for_link_we_will_send_you_inside_the_link_you_will_reset_your_password">Enter your Email address and wait for link we will send you, inside the link you will reset your password</string>
    <string name="confirm">Confirm</string>
    <string name="name">Name</string>
    <string name="lase_message">Last message</string>
    <string name="hello">hello</string>
    <string name="date">Date</string>
    <string name="hour">Hour</string>
    <string name="type">Type</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="write_a_little_bit_about_yourself">Write a little bit about yourself</string>
    <string name="you_can_write_some_hobbies">You can write some hobbies...</string>
    <string name="save">Save</string>
    <string name="add_your_email_address">Add your Email address</string>
    <string name="click_here">Click Here</string>
    <string name="edit_user_information">Edit user information</string>
    <string name="full_name">Full Name</string>
    <string name="country">Country</string>
    <string name="age">Age</string>
    <string name="add_a_new_volunteering">Add a new volunteering</string>
    <string name="pick_date">Pick date</string>
    <string name="pick_time">Pick time</string>
    <string name="get_location">Get location</string>
    <string name="category">Category:</string>
    <string name="language">Language:</string>
    <string name="hebrew">Hebrew</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="description">Description</string>
    <string name="add_profile_picture">Add profile picture:</string>
    <string name="hello_and_welcome_nplease_enter_your_profile_info">Hello and Welcome!\nPlease Enter your profile info</string>
    <string name="address">Address</string>
    <string name="volunteering">Volunteering</string>
    <string name="level">Level</string>
    <string name="beginner">Beginner</string>
    <string name="your_volunteering">Your volunteering</string>
    <string name="next_volunteering">Next volunteering</string>
    <string name="old_volunteering">Old volunteering</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="approved">Approved</string>
    <string name="contact_information">Contact information</string>
    <string name="chat">Chat</string>
    <string name="types_of_volunteering">Types of volunteering</string>
    <string name="about_me">About Me</string>
    <string name="edit">Edit</string>
    <string name="click_to_add_your_email">Click to add your Email</string>
    <string name="add_something_about_yourself">Add something about yourself</string>
    <string name="verify_phone_number">Verify phone number</string>
    <string name="enter_the_code_you_received_to_your_phone">Enter the code you received to your phone</string>
    <string name="date2">Date:</string>
    <string name="time2">Time:</string>
    <string name="name2">Name:</string>
    <string name="location2">Location:</string>
    <string name="description2">Description:</string>
    <string name="add">Add</string>
    <string name="profile_page">Profile page</string>
    <string name="delete">Delete</string>
    <string name="remove_me">Remove me</string>
    <string name="add_me">Add me</string>
    <string name="volunteer_taken">Volunteer taken</string>
    <string name="welcome">Welcome!</string>
    <string name="register">Register</string>
    <string name="register_as">Register as...</string>
    <string name="volunteer">Volunteer</string>
    <string name="need_help">Need help</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="log_out_from_google">Log Out from Google</string>
    <string name="log_out">Log Out</string>
    <string name="shopping">Shopping</string>
    <string name="play_games">Play Games</string>
    <string name="just_to_talk">Just to talk</string>
    <string name="home_repairs">Home repairs</string>
    <string name="medicines">Medicines</string>
    <string name="good">Good</string>
    <string name="excellent">Excellent</string>
    <string name="superior">Superior</string>
    <string name="outstanding">Outstanding</string>
    <string name="loading_chats">Loading Chats, Please wait..</string>
    <string name="new_message">New Message</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="are_you_sure_you_want_to_delete_this_volunteering">Are you sure you want to delete this volunteering?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="will_volunteer_with_you">will volunteer with you</string>
    <string name="new_volunteer_added">New Volunteer added</string>
    <string name="loading">Loading, Please wait..</string>
    <string name="massages">My messages</string>
    <string name="name_required">First name is Required</string>
    <string name="age_required">Age is Required</string>
    <string name="country_required">Country is Required</string>
    <string name="city_required">City is Required</string>
    <string name="upload_user_image">Upload user image!</string>
    <string name="phone_required">Phone Number is Required</string>
    <string name="phone_number_must_be_at_least">Phone Number Must be at least</string>
    <string name="numbers">numbers</string>
    <string name="user_email_is_required">User Email is Required</string>
    <string name="password_is_required">Password is Required</string>
    <string name="password_must_be">Password Must be</string>
    <string name="characters">Characters</string>
    <string name="email_sent">Email sent</string>
    <string name="email_not_sent">Email not sent</string>
    <string name="you_have_been_removed">You have been removed</string>
    <string name="you_have_been_added">You have been added</string>
    <string name="volunteering_list">Volunteering list</string>
    <string name="code_error_please_trya_another_code">Code error, please try another code</string>
    <string name="error">Error</string>
    <string name="your_request_has_been_added">Your request has been added</string>
    <string name="sms">The sms has been sent</string>
    <string name="replacing_Image">Replacing Image...</string>
    <string name="uploaded">Uploaded</string>
    <string name="alartMsgNoGPS">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="RequestPermissionsResult">The application must have location permission in order to get location!</string>
    <string name="attention">Attention</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="street_is_required">Street is Required</string>
    <string name="hour_is_required">Hour is Required</string>
    <string name="date_is_required">Date is Required</string>
</resources>