<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="5dp"
    app:contentPadding="10dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name_on_card"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textSize="12sp"
            android:text="@string/name"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/grayDarkColor"/>


        <TextView
            android:id="@+id/date_on_card"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="@string/date"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"/>

        <TextView
            android:id="@+id/hour_on_card"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/hour"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/grayDarkColor"/>

        <TextView
            android:id="@+id/location_on_card"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textSize="12sp"
            android:text="@string/city"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>