<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginHorizontal="50dp"
    android:layout_marginTop="70dp"
    android:background="@drawable/color_back3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/edit_user_information"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:textSize="19sp"
        app:startIconDrawable="@drawable/ic_baseline_edit_24"
        android:fontFamily="@font/poppins_medium" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/full_name"
        android:textSize="20sp"
        app:startIconDrawable="@drawable/ic_emoji_people">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/full_name_edit_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="5dp"
        android:hint="@string/age"
        android:textSize="20sp"
        app:startIconDrawable="@drawable/ic_baseline_eco_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/age_edit_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:inputType="number"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="5dp"
        android:hint="@string/country"
        android:textSize="20sp"
        app:startIconDrawable="@drawable/ic_baseline_location_city_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/country_edit_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="5dp"
        android:hint="@string/city"
        android:textSize="20sp"
        app:startIconDrawable="@drawable/ic_baseline_home_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/city_edit_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_edit_user_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/color_back4"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/save"
        android:textColor="@color/browser_actions_text_color"
        android:textSize="12sp" />

</LinearLayout>