<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginHorizontal="30dp"
    android:layout_marginTop="70dp"
    android:background="@drawable/color_back3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add_your_email_address"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:textSize="19sp"
        app:startIconDrawable="@drawable/ic_baseline_edit_24"
        android:fontFamily="@font/poppins_medium" />


    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/whiteColor"
        android:hint="@string/click_here"
        android:gravity="center"
        android:fontFamily="@font/poppins_medium"
        android:id="@+id/email_et_dialog"
        android:padding="8dp"/>

    <Button
        android:id="@+id/email_et_btn_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/color_back4"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/save"
        android:textColor="@color/browser_actions_text_color"
        android:textSize="12sp" />

</LinearLayout>