<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_back3"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AfterRegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello_and_welcome_nplease_enter_your_profile_info"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="40dp"
                android:hint="@string/full_name"
                android:textSize="20sp"
                app:startIconDrawable="@drawable/ic_emoji_people">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/full_name_add_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="5dp"
                android:hint="@string/age"
                android:textSize="20sp"
                app:startIconDrawable="@drawable/ic_baseline_eco_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/age_add_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="number"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="5dp"
                android:hint="@string/country"
                android:textSize="20sp"
                app:startIconDrawable="@drawable/ic_baseline_location_city_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/country_add_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="5dp"
                android:hint="@string/city"
                android:textSize="20sp"
                app:startIconDrawable="@drawable/ic_baseline_home_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/city_add_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="15sp"
                android:text="@string/add_profile_picture"
                android:gravity="center"
                android:fontFamily="@font/poppins_medium"/>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/color_back3"
                android:src="@drawable/ic_camera"
                android:scaleType="fitXY"
                android:id="@+id/image_profile_add_info"/>

            <Button
                android:background="@drawable/color_back4_circle"
                android:id="@+id/submit_add_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/submit"
                android:textColor="@color/grayDarkColor"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="120dp"/>

        </LinearLayout>

    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>